--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" style=" width: 100%; height: 100%;">
 	<head>
 		<meta charset="utf-8">
-		<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
+		<!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script> -->
+		<script src="./jquery.js"></script>
 		<script src="https://cdn.staticfile.org/echarts/4.5.0/echarts.min.js"></script>
 		<link rel="stylesheet" href="./index.css" />
 		<title>Echatrs组成</title>
