--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="./jquery.js"></script>
+		<script src="./jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="./js/testData.js"></script>
 		<script src="https://cdn.staticfile.org/echarts/4.5.0/echarts.min.js"></script>
 		<script src="./js/main.js"></script>
