--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script> -->
+		<script src="https://s3.pstatp.com/cdn/expire-1-M/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="./index.css" />
 		<title>Echatrs组成</title>
 	</head>
@@ -39,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="./jquery.min.js"></script>
+		<!-- <script src="./jquery.min.js"></script> -->
 		<script type="text/javascript" src="./js/testData.js"></script>
 		<script src="https://cdn.staticfile.org/echarts/4.5.0/echarts.min.js"></script>
 		<script src="./js/main.js"></script>
