--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</div>
 		<!-- <script src="./jquery.min.js"></script> -->
 		<script type="text/javascript" src="./js/testData.js"></script>
+		<script type="text/javascript" src="./js/san.js"></script>
 		<script src="https://cdn.staticfile.org/echarts/4.5.0/echarts.min.js"></script>
 		<script src="./js/main.js"></script>
 		<script src="./js/main2.js"></script>
@@ -54,12 +55,6 @@
 			// var myChart = echarts.init(document.getElementById('main'));
 			// 	myChart.setOption(option);
 			
-			$.ajax({
-				url: "https://geo.datav.aliyun.com/areas_v2/bound/100000_full.json",
-				success: function(geoJson) {
-					console.log(geoJson)
-				}
-			})
 
 			function autoScroll(obj) {
 				$(obj).find("ul").animate({
