--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
 					$('.maquee').html(html)
 				}
 			})
+			
+			
+			$.ajaxSettings.async = false;
+			$.get('https://www.fastmock.site/mock/cec8d88ba54e9fef814408c46ce2e99a/map/migrate', function(list) {
+				console.log('测试get'，data)
+			})
+			$.ajax({
+				url: "https://www.fastmock.site/mock/cec8d88ba54e9fef814408c46ce2e99a/map/migrate",
+				dataType: "jsonp",
+				type:"get",
+				success: function(data) {
+						console.log('测试ajax'，data)
+				}
+			})
+			
 		</script>
 	</body>
 
