--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 			
 			$.ajaxSettings.async = false;
 			$.get('https://www.fastmock.site/mock/cec8d88ba54e9fef814408c46ce2e99a/map/migrate', function(list) {
-				console.log('测试get'，data)
+				console.log('测试get',data)
 			})
+			
 			$.ajax({
 				url: "https://www.fastmock.site/mock/cec8d88ba54e9fef814408c46ce2e99a/map/migrate",
 				dataType: "jsonp",
