--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				dataType: "jsonp",
 				type:"get",
 				success: function(data) {
-						console.log('测试ajax'，data)
+						console.log('测试ajax',data)
 				}
 			})
 			
