--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		height:100%;
 		min-height: 600px;
 		margin: auto;
-		background: url(./img/ksh41.png) no-repeat;
-    background-size: 100% 100%;
+		/* background: url(./img/ksh41.png) no-repeat; */
+    /* background-size: 100% 100%; */
 	position: relative;
 	}
 
